LoanFlow/force-app/main/default/objects/Decision_Policy__mdt/Decision_Policy__mdt.object-meta.xml
<CustomObject>
    <label>Decision Policy</label>
    <pluralLabel>Decision Policies</pluralLabel>
</CustomObject>