LoanFlow/force-app/main/default/objects/Decision_Policy__mdt/fields/Auto_Approve_Score__c.field-meta.xml
<CustomField>
    <fullName>Auto_Approve_Score__c</fullName>
    <label>Auto Approve Score</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
    <required>true</required>
    <description>Risk score at or above which an application is auto-approved.</description>
</CustomField>