LoanFlow/force-app/main/default/objects/Decision_Policy__mdt/fields/Auto_Decline_Score__c.field-meta.xml
<CustomField>
    <fullName>Auto_Decline_Score__c</fullName>
    <label>Auto Decline Score</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
    <required>true</required>
    <description>Risk score below which an application is declined.</description>
</CustomField>