LoanFlow/force-app/main/default/objects/Decision_Policy__mdt/fields/Manual_Review_Amount__c.field-meta.xml
<CustomField>
    <fullName>Manual_Review_Amount__c</fullName>
    <label>Manual Review Amount</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>0</scale>
    <required>true</required>
    <description>Loan amount at or above which the application always goes to an underwriter.</description>
</CustomField>